# structure-ai-bot

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  pyproject.toml
ai_assisted_automation/: cli.py
ai_assisted_automation/api/: app.py  routes.py  sse.py
examples/: anime_intel_graphql_workflow.py  artist_intel_reduced_workflow.py  artist_intel_workflow.py  geo_weather_workflow.py  github_intel_workflow.py  travel_briefing_workflow.py
static/: index.html
tests/: test_api.py  test_api_client.py  test_api_client_extended.py  test_api_client_form_encoded.py  test_config.py  test_edge_inference.py  test_graph_validator.py  test_planner.py  test_state_manager.py  test_step_executor.py  test_step_validator.py  test_storage.py  test_template_renderer.py  test_topological_sort.py  test_workflow_executor.py  test_workflow_executor_tracking.py
tools/: anilist_anime.yaml  api_ninjas_celebrity.yaml  api_ninjas_sentiment.yaml  countries_graphql.yaml  exchange_rate.yaml  geocode_city.yaml  github_add_anime_comment.yaml  github_commit_activity.yaml  github_contributors.yaml  github_create_anime_report.yaml  github_graphql_add_comment.yaml  github_graphql_create_issue.yaml  github_graphql_repo.yaml  github_issues.yaml  github_releases.yaml  github_repo.yaml  http_api.yaml  httpbin_post.yaml  ip_geolocation.yaml  newsapi_search.yaml  open_meteo.yaml  rest_countries.yaml  rickmorty_character.yaml  spotify_related_artists.yaml  spotify_search_artist.yaml  spotify_token.yaml  spotify_top_tracks.yaml  weather_api.yaml  wikipedia_summary.yaml  youtube_search.yaml  youtube_video_stats.yaml
(+22 files in other folders)
