[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assisted-automation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pydantic-ai>=0.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "responses>=0.23",
    "httpx>=0.24",
]

[project.scripts]
aaa = "ai_assisted_automation.cli:main"

[tool.setuptools.packages.find]
include = ["ai_assisted_automation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
